@@ -1382,12 +1382,12 @@ print_private_key(FILE *outfile, common_info_st * cinfo, gnutls_x509_privkey_t k
 
 	/* Only print private key parameters when an unencrypted
 	 * format is used */
-	if (cinfo->outtext)
-		privkey_info_int(outfile, cinfo, key);
-
 	switch_to_pkcs8_when_needed(cinfo, key, gnutls_x509_privkey_get_pk_algorithm(key));
 
 	if (!cinfo->pkcs8) {
+
+		if (cinfo->outtext)
+			privkey_info_int(outfile, cinfo, key);
 
 		size = lbuffer_size;
 		ret = gnutls_x509_privkey_export(key, cinfo->outcert_format,
@@ -1403,6 +1403,9 @@ print_private_key(FILE *outfile, common_info_st * cinfo, gnutls_x509_privkey_t k
 
 		pass = get_password(cinfo, &flags, 0);
 		flags |= cipher_to_flags(cinfo->pkcs_cipher);
+
+		if (cinfo->outtext && (flags & GNUTLS_PKCS_PLAIN))
+			privkey_info_int(outfile, cinfo, key);
 
 		size = lbuffer_size;
 		ret =
